@@ -1,9 +1,12 @@
 package ru.nsu.tsydenov;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-
-import static org.junit.jupiter.api.Assertions.*;
 
 class DealerTest {
 
@@ -32,7 +35,7 @@ class DealerTest {
 
         assertNotNull(dealtCard);
         assertEquals(1, player.hand.size());
-        assertEquals(dealtCard, player.hand.get(0));
+        assertEquals(dealtCard, player.hand.getFirst());
     }
 
     @Test
